# native-dev-env

./: .gitignore  Dockerfile  README.md  build.sh  build_env.sh  build_env_buildah.sh  build_env_in_container.sh  buildah_chroot.sh  buildah_container.sh  buildah_create_container.sh  buildah_run_in_chroot.sh  buildah_run_in_container_rootless.sh  container_build.sh  docker_build_env.sh  docker_shell.sh
.github/: build.yaml
assets/: .bashrc  .bashrc_cloud  .bashrc_native  .bashrc_utils  .logo.py  .p10k.zsh  .zsh_plugins.antibody  .zshrc  .zshrc-ext-shell.zsh  .zshrc-info.zsh  .zshrc-shell-tools.zsh  .zshrc.zsh  .zshrc_cloud  bashrc.sh  cloud.zsh  cloud_bashrc.sh  conan_settings.yml  essentials.sh  fakeroot_mknod.sh  mknod.sh  native.zsh  native_ssh_server.zsh  theming.zsh  update_alternatives.sh
base/: Dockerfile
cloud/: .zshrc.zsh  Dockerfile  devenv.txt  setup.zsh  zshrc.zsh
cloud-ohmyzsh/: Dockerfile
cloudbase/: Dockerfile  setup.zsh
devenv-cloud/: .zshrc.zsh  Dockerfile  devenv-cloud.dockerfile  tools.txt
devenv-essentials/: .antibody_plugins.zsh  .antigen_plugins.zsh  .devenv_aliases.zsh  .fzf.zsh  .key_bindings.zsh  .zshrc  .zshrc.zsh  Dockerfile  devenv-essentials.dockerfile
devenv-native-base/: Dockerfile
devenv-native-ssh-server/: Dockerfile  devenv-native.dockerfile  (+1 more)
devenvcpp/app/: CMakeLists.txt  build.sh  conanfile.txt  install_deps.sh
devenvcpp/app/conan_profiles/: install.sh
devenvcpp/app/src/common/: CMakeLists.txt  demo_api.cpp
devenvcpp/app/src/common/include/: example_api.h
devenvcpp/app/src/demoapp/: CMakeLists.txt  main.cpp
(+79 files in other folders)
